--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.2",
     "lucide-react": "^0.344.0",
     "openai": "^5.19.1",
     "react": "^18.3.1",
